2008-06-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.[ch]: Removed a lot of
	public API here because it is no longer needed. Simplified the way
	we set up TrackerDBInterface objects. Improved the logging. Added
	support for attaching all databases to one connection. Fixed the
	odd bug found. 

	* src/tracker-indexer/tracker-main.c: Initialise the database
	manager without attaching all databases.
	
	* src/trackerd/tracker-main.c:  Initialise the database manager
	with attach_all_dbs set to FALSE for now, setting this to TRUE
	causes problems when running the daemon with --reindex.
	
2008-06-09  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-manager.c
	(db_manager_row_to_field_def): Plug a leak.

2008-06-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-utils.h:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-email.c:
	* src/trackerd/tracker-db-sqlite.[ch]:
	* src/trackerd/tracker-db.[ch]:
	* src/trackerd/tracker-dbus.c:
	* src/trackerd/tracker-email-utils.h:
	* src/trackerd/tracker-files.c:
	* src/trackerd/tracker-keywords.c:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-process-files.c:
	* src/trackerd/tracker-rdf-query.c:
	* src/trackerd/tracker-search.c: 
	* src/trackerd/tracker-xesam-live-search.c:
	* src/trackerd/tracker-xesam-query.c:
	* src/trackerd/tracker-xesam.h: Removed tracker-db-sqlite.[ch] and
	merged it with tracker-db.[ch].

2008-06-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.[ch]:
	* src/trackerd/tracker-daemon.[ch]:
	* src/trackerd/tracker-db-email.[ch]:
	* src/trackerd/tracker-db-sqlite.[ch]:
	* src/trackerd/tracker-db.[ch]:
	* src/trackerd/tracker-dbus.c:
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-kmail.c:
	* src/trackerd/tracker-email-modest.c: 
	* src/trackerd/tracker-email-plugin.h:
	* src/trackerd/tracker-email-thunderbird.c:
	* src/trackerd/tracker-email-utils.[ch]: